Swap uuids to user ids for query page filters
Fixes an issue where SQL is too big to execute